1.移动端登录页面加入刷新按钮 2.移动端加入token支持

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build-server": "node --max_old_space_size=256  build/build.js",
+	"build": "node  build/build.js"
+
   },
   "dependencies": {
     "axios": "^0.18.1",
