--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "olisclient-mobile",
+  "name": "olisclient",
   "version": "1.0.0",
-  "description": "olis mobile client",
+  "description": "olis client",
   "author": "helloEarther",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build-server": "node --max_old_space_size=256  build/build.js",
-	"build": "node  build/build.js"
-
+    "build": "node  build/build.js"
   },
   "dependencies": {
     "axios": "^0.18.1",
@@ -34,6 +33,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "address": "^1.1.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
